--- a/.github/workflows/TMDC-helm-push.yaml
+++ b/.github/workflows/TMDC-helm-push.yaml
@@ -26,7 +26,7 @@ jobs:
         fetch-depth: 0
     
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
+      uses: aws-actions/configure-aws-credentials@v2
       with:
         role-to-assume: ${{ secrets.OIDC_ROLE_ARN }}
         aws-region: ${{ secrets.AWS_ECR_REGION }}
@@ -39,8 +39,8 @@ jobs:
         TAG: ${{ github.ref_name }}
         ECR_HOST: ${{ steps.login-ecr.outputs.registry }}
       run: |
-          make push-chart
-          make push-oci-chart
+          make push-thanos-chart
+          make push-thanos-oci-chart
 
   redis-release:
     name: Release Package and Push Helm Chart to ECR
@@ -62,7 +62,7 @@ jobs:
         fetch-depth: 0
     
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
+      uses: aws-actions/configure-aws-credentials@v3
       with:
         role-to-assume: ${{ secrets.OIDC_ROLE_ARN }}
         aws-region: ${{ secrets.AWS_ECR_REGION }}
@@ -75,5 +75,5 @@ jobs:
         TAG: ${{ github.ref_name }}
         ECR_HOST: ${{ steps.login-ecr.outputs.registry }}
       run: |
-          make push-chart
-          make push-oci-chart
+          make push-redis-chart
+          make push-redis-oci-chart
