--- a/.github/workflows/TMDC-helm-push.yaml
+++ b/.github/workflows/TMDC-helm-push.yaml
@@ -2,11 +2,10 @@ name: TMDC Helm chart push workflow to AWS ECR
 on:
   push:
     tags:
-      - 'thanos-*[0-9]+.*[0-9]+.*[0-9]-d*'
-      - 'redis-*[0-9]+.*[0-9]+.*[0-9]-d*'
+      - '*-*[0-9]+.*[0-9]+.*[0-9]-d*'
 jobs:
 # For RELEASE
-  thanos-release:
+  release:
     name: Release Package and Push Helm Chart to ECR
     runs-on: ubuntu-latest
     container:
@@ -18,7 +17,7 @@ jobs:
       id-token: write
       contents: read
     
-    if: startsWith(github.ref, 'refs/tags/thanos-') && contains(github.ref, '-d')
+    if: startsWith(github.ref, 'refs/tags/') && contains(github.ref, '-d')
     steps:
     - name: Check out the repo
       uses: actions/checkout@v4
@@ -26,7 +25,7 @@ jobs:
         fetch-depth: 0
     
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v2
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         role-to-assume: ${{ secrets.OIDC_ROLE_ARN }}
         aws-region: ${{ secrets.AWS_ECR_REGION }}
@@ -39,41 +38,5 @@ jobs:
         TAG: ${{ github.ref_name }}
         ECR_HOST: ${{ steps.login-ecr.outputs.registry }}
       run: |
-          make push-thanos-chart
-          make push-thanos-oci-chart
-
-  redis-release:
-    name: Release Package and Push Helm Chart to ECR
-    runs-on: ubuntu-latest
-    container:
-        image: rubiklabs/k8s_cli_builder:0.6.0
-        credentials:
-            username: ${{ secrets.DOCKER_HUB_USERNAME }}
-            password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-    permissions:
-      id-token: write
-      contents: read
-    
-    if: startsWith(github.ref, 'refs/tags/redis-') && contains(github.ref, '-d')
-    steps:
-    - name: Check out the repo
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v3
-      with:
-        role-to-assume: ${{ secrets.OIDC_ROLE_ARN }}
-        aws-region: ${{ secrets.AWS_ECR_REGION }}
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v2
-      
-    - name: Package and push Helm chart
-      env:
-        TAG: ${{ github.ref_name }}
-        ECR_HOST: ${{ steps.login-ecr.outputs.registry }}
-      run: |
-          make push-redis-chart
-          make push-redis-oci-chart
+          make push-chart
+          make push-oci-chart
